# glxoffload

./: .gitignore  Makefile.am  README.md  configure.ac  kroki-glxoffload.spec.in
src/: Makefile.am  kroki-glxoffload-audit.c  libGL.c
src/stub/: libkroki-glxoffload.c
